#140 Mod font family to Roboto

--- a/cliphype/templates/app/base.html
+++ b/cliphype/templates/app/base.html
@@ -18,7 +18,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>{% block head_title %}{% endblock %}</title>
-	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p|Notable|Poppins&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Noto+Sans+JP&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{% static 'app/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.10.2/css/all.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css">
@@ -26,7 +26,7 @@
 	<link rel="shortcut icon" type="image/png" href="{% static 'app/favicon.ico' %}"/>
 	<style>
 		body {
-			font-family: 'Poppins', sans-serif;
+			font-family: 'Roboto', 'Noto Sans JP', sans-serif;
 		}
     </style>
     {% block extra_head %}
@@ -37,7 +37,7 @@
 	<nav class="navbar navbar-expand navbar-white bg-white navbar-clip shadow-sm">
     <div class="container">
 		<div class="mr-1 rounded">
-			<a class="navbar-brand font-weight-bold text-dark" href="/">CLIPHYPE<small class="ml-1 badge badge-light text-secondary shadow-sm">beta</small></a>
+			<a class="navbar-brand font-weight-bold text-dark" href="/">ClipHype<small class="ml-1 badge badge-light text-secondary">beta</small></a>
 		</div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content">
             <span class="navbar-toggler-icon"></span>
