--- a/cliphype/static/app/css/style.css
+++ b/cliphype/static/app/css/style.css
@@ -8,15 +8,19 @@
 
 .bg-twitch {
     background: #772CE8;
+    background: #8431ff;
 }
 .bg-twitch-light {
-    background: #9147FF;
+    background: #ede1ff;
 }
 .bg-twitch-dark {
     background: #2b2b5f;
 }
 .bg-black {
     background: #000000;
+}
+.bg-lightdark {
+   background: #efedf6;
 }
 .text-twitch-light {
     color: #9147FF;
