#140 Mod background color and margin

--- a/cliphype/templates/app/base.html
+++ b/cliphype/templates/app/base.html
@@ -34,7 +34,7 @@
 </head>
 <body class="bg-lightdark">
 	<!-- HEADER -->
-	<nav class="navbar navbar-expand navbar-white bg-twitch navbar-clip shadow-sm">
+	<nav class="navbar navbar-expand navbar-white bg-twitch-dark navbar-clip shadow-sm">
     <div class="container">
 		<div class="mr-1 rounded">
 			<a class="navbar-brand text-light font-weight-bold" style="font-family: 'Righteous'" href="/">ClipHype<small class="ml-1 badge badge-light text-secondary">beta</small></a>
@@ -95,7 +95,7 @@
 	<!-- /MAIN -->
 
 	<!-- FOOTER -->
-	<footer class="py-4 bg-dark text-light">
+	<footer class="py-4 bg-twitch-dark text-light">
 		<div class="container text-center">
 			<p><small class="font-weight-bold">Contact @</small>
 				<a href="https://twitter.com/hrmk_code" target="_blank"><i class="fab fa-twitter-square ml-1" style="color:white; font-size: 1.5em"></i></a>
