--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -10,8 +10,8 @@
 <div class="container">
     <!-- SEARCH STREAMER -->
     <div class="section" id="search">
-        <label class="row mt-2 mb-3">
-            <div class="col">
+        <label class="row mt-3">
+            <div class="col mt-3">
                 <h4 class="d-inline text-dark font-weight-bolder">Streamer</h4>
                 <input type="text" v-model="streamerName" class="d-inline input-lg border rounded-0 ml-2 pl-2 py-1" placeholder="shroud" required>
                 <button class="btn btn-outline-primary px-2" v-on:click="getStreamerId">
@@ -23,7 +23,7 @@
     <!-- /SERACH STREAMER -->
     <!-- SEARCH CATEGORY -->
     <div class="section" id="search">
-        <label class="row mt-2 mb-3">
+        <label class="row mt-2">
             <div class="col">
                 <h4 class="d-inline text-dark font-weight-bolder">Category</h4>
                 <input type="text" v-model="category.categoryNameQuery" class="d-inline input-lg border rounded-0 ml-2 pl-2 py-1" placeholder="League of Legends" required>
@@ -40,7 +40,7 @@
     </div>
     <!-- /SERACH STREAMER -->
     <!-- FOLLOWS CHANNEL -->
-    <div class="mt-2 section" id="follows" v-show="clientId.length !== 0">
+    <div class="mt-3 section" id="follows" v-show="clientId.length !== 0">
         <h1>
             <a class="text-dark text-decoration-none font-weight-bold" tabindex="-1" href="#follows" data-toggle="tooltip" title="Click icon to show selected streamer's clips" data-placement="right">
             Follow Channels
