--- a/cliphype/static/app/css/style.css
+++ b/cliphype/static/app/css/style.css
@@ -8,13 +8,14 @@
 
 .bg-twitch {
     background: #772CE8;
-    background: #8431ff;
 }
 .bg-twitch-light {
     background: #ede1ff;
 }
 .bg-twitch-dark {
     background: #2b2b5f;
+    background: #7855ab;
+    background: #6e4e9d;
 }
 .bg-black {
     background: #000000;
