--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -312,6 +312,10 @@
                     <i class="fas fa-sort-amount-down-alt"></i>
                     <i class="far fa-clock"></i>
                 </button>
+                <button class="btn btn-success" @click="postDownloadClips" :disabled="isDownloadingClips">
+                    <i v-if="isDownloadingClips" class="fas fa-spinner fa-spin" style="font-size: 1.0em"></i>
+                    <i v-else class="fas fa-download" style="font-size: 1.0em"></i>
+                </button>
             </div>
         </div>
     </div>
@@ -726,6 +730,7 @@
     const task_url = "{% url 'task-list' %}";
     const autoclip_url = "{% url 'autoclip-list' %}";
     const studio_url = "{% url 'index' %}";
+    const download_clips_url = "{% url 'download_clips' %}";
     const api_url = "{% url 'twitch_api' %}";
     const youtube_submission_url = "{% url 'google_api_request' %}";
 </script>
