--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -382,6 +382,14 @@
                         </iframe>
                         </div>
                         <div class="mx-auto">
+                            <div class="position-absolute autoplay-timer">
+                                <div class="position-static">
+                                    <button type="button" class="btn bg-dark text-light" @click="additionalTime++">+</button>
+                                    <button type="button" class="btn bg-dark text-light" @click="additionalTime--">-</button>
+                                    <button type="button" v-if="isAutoplaying" class="btn bg-dark text-light" @click="stopAutoplay">[[remainingTimeTillNextClip]]([[additionalTimeStr]])</button>
+                                    <button type="button" v-else class="btn bg-dark text-light" @click="startAutoplay">auto</button>
+                                </div>
+                            </div>
                             <a class="mr-4 display-4" style="cursor: pointer;" v-on:click="openPrevSelectedClip"><i class="fas fa-angle-left text-light"></i></a>
                             <a class="ml-4 display-4" style="cursor: pointer;" v-on:click="openNextSelectedClip"><i class="fas fa-angle-right text-light"></i></a>
                         </div>
