--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -315,7 +315,7 @@
                 </button>
                 <button class="btn btn-info dropdown-toggle dropdown-toggle-split" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 </button>
-                <button class="btn btn-success" @click="postDownloadClips" :disabled="isDownloadingClips">
+                <button class="ml-1 btn rounded btn-success" @click="postDownloadClips" :disabled="isDownloadingClips">
                     <i v-if="isDownloadingClips" class="fas fa-spinner fa-spin" style="font-size: 1.0em"></i>
                     <i v-else class="fas fa-download" style="font-size: 1.0em"></i>
                 </button>
